--- a/VRChat/26/1069626.html
+++ b/VRChat/26/1069626.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bJTZyfC00ONZNfnN0auzp0D5UlZKsSyHprggAgBtFb4="></script>
+    "iDfoCGfiuq8nW1c11Q3H62UXx8hmpkd1dbTWZEjhqK8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"革製スニーカー","description":"黒と白があるよ！！！\n\n\n革製スニーカー\n\n■モデル製作：ハザマススム\n　□Twitter https://twitter.com/hazama_susumu\n\n■説明\n　□革のスニーカーです\n　□三角面足つき4140\n          足なし3692です\n\n■免責\n　□このモデルデータを使って起きた不利益は\n　　いかなる場合でも製作者は一切責任を負いません\n　□著作権はハザマススムにあります\n\n■許可\n　□非商用・商用利用\n　□非改変・改変利用\n\n■禁止事項\n　□再配布\n　□自作発言\n　□迷惑行為\n\n■参考サイト\n　□革テクスチャ\n　　https://pixabay.com/ja/%E9%9D%A9-%E3%83%86%E3%82%AF%E3%82%B9%E3%83%81%E3%83%A3-%E8%83%8C%E6%99%AF-%E3%83%95%E3%82%A1%E3%83%96%E3%83%AA%E3%83%83%E3%82%AF-%E7%94%9F-%E8%A3%85%E9%A3%BE-%E6%9D%90%E6%96%99-%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3-1251774/\n\n　□布テクスチャ　フリーテクスチャ素材館様\n　　https://free-texture.net/etc-textures/cotton01.html","url":"https://booth.pm/ja/items/1069626","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/353af48e-2d96-4325-9c66-ad3463af6bc1/i/1069626/9702a6bc-3e84-4d96-a13b-e6ad4ce5bdd3_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bJTZyfC00ONZNfnN0auzp0D5UlZKsSyHprggAgBtFb4="></script>
+    nonce="iDfoCGfiuq8nW1c11Q3H62UXx8hmpkd1dbTWZEjhqK8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069626/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
