--- a/VRChat/28/1069428.html
+++ b/VRChat/28/1069428.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kkB/kDyzX7bAOcNcy/76mCRfkGlE0xJCe9DPbifodgQ="></script>
+    "teoIoChrdToU/hCEEcRdtwGiDRQBJgkxI4qWaxQDF/M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Px4 Storm","description":"●イタリアの自動拳銃、Px4 Stormの3Dモデルです。\n△10199ポリゴン\n\n\n●内容\n・Px4.fbx\n\n・readme.txt\n\n・テクスチャ各種\n\n\n●使用方法\n\nテクスチャ、fbxデータを各種ソフトにインポートしてご利用下さい。\n\n\n●免責事項\n当モデルを使用することで使用者側に不利な問題が生じた場合、\nそれがいかなるものであっても配布元は一切責任を負いません。\n\n●利用について\n\n配布行為そのものを目的とした再配布を禁止\n（ゲームの素材やモデルの一部に利用して配布等は可）\n\n宗教や政治的主張等での使用は禁止\n\nVRchat、改変、動画、同人などにどうぞ","url":"https://booth.pm/ja/items/1069428","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e56a8ef4-8f34-4b71-9b03-b4f436803f81/i/1069428/0a0115d9-9bc3-4f89-8391-f91389c0aa5f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kkB/kDyzX7bAOcNcy/76mCRfkGlE0xJCe9DPbifodgQ="></script>
+    nonce="teoIoChrdToU/hCEEcRdtwGiDRQBJgkxI4qWaxQDF/M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,10 +155,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069428/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              856
+                              857
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069428/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              856
+                              857
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
