--- a/VRChat/60/1069360.html
+++ b/VRChat/60/1069360.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "25ZvVjdDn1wSw6GfCvX3xOzvG8cs9tKVDomjV9iVFBU="></script>
+    "epZJhRC0BNr2HMmYQCuswHfQuCg5KjLE9xnpKfeVuII="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"箱市展示物_盾","description":"箱市に出品していた盾です\n使用用途は考えてないよ\n\nスペック\nマテリアル：1\nポリゴン数：1390\nシェーダーはスタンダードシェーダを\nAlbedo / Metallic / Normal map\nの適用が必要です。\nNormal mapを入れた後に表示されるfix nowを忘れずに行ってください\n\n一応VRChatで使用するのを想定していますが、他の場所で使ってもらっても問題有りません。\n改変等自由に行ってOKです。\n\n簡易規約\n商用利用：OK\n改変：OK\n\n再配布：NG\n特定の個人、集団に対する誹謗中傷、名誉棄損：NG\n\n利用上で不利益、トラブルが起こっても私は関知しませんし一切の責任を負いません。自己責任でお願いします。","url":"https://booth.pm/ja/items/1069360","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8254d2af-29c2-4f0d-b9b6-9ebf2add62f7/i/1069360/0fb9af76-3fe9-479e-aca5-af68e52a099c_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="25ZvVjdDn1wSw6GfCvX3xOzvG8cs9tKVDomjV9iVFBU="></script>
+    nonce="epZJhRC0BNr2HMmYQCuswHfQuCg5KjLE9xnpKfeVuII="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069360/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069360/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               2
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
