--- a/VRChat/54/1065354.html
+++ b/VRChat/54/1065354.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gbvIPlH9Leol4eo4AsOOYYMLnXRmc8Ktfs2+mqP76Eo="></script>
+    "495g4uylz/8HpfqH5Pq1IY78Scgrm+35JjC6BIV6Mc0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】スルトの剣","description":"ご購入されてVRChatで使用された方は、twitterで@tuneken_workにスクショを送っていただけると作者が喜びます！\n\n【商品説明】\n北欧神話の炎の巨人・スルトをイメージして作成した炎の剣です。\n\nEmissionによって発光するアニメーションが含まれています。\nまた、デフォルトパーティクルで作成した簡単な火の粉エフェクトも付属しています。\n\nマテリアルはデフォルトを使用しています。\n\n【含まれる物】\nUnitypackage\n -武器モデル本体のFBX\n -武器モデル本体のPrefab\n -カラーマップ\n -エミッションマップ\n -アニメーションデータ（発光）\n -火の粉エフェクト（本体Prefabに内蔵）\n\n\n【使用に関する注意】\n・モデル、テクスチャ、エフェクトの改造・加筆修正は自由です。\n・無償、有償に関わらずデータの再配布はおやめください。\n・VRChatで使用することを想定していますが、Vtuber等の動画コンテンツ、同人ゲーム等での使用も可能です。\n","url":"https://booth.pm/ja/items/1065354","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/c43583ad-31e1-4ed9-9a1e-3c3f8648877c/i/1065354/d06029c8-01b1-4a82-9bb8-2eb70b6f66a3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gbvIPlH9Leol4eo4AsOOYYMLnXRmc8Ktfs2+mqP76Eo="></script>
+    nonce="495g4uylz/8HpfqH5Pq1IY78Scgrm+35JjC6BIV6Mc0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1065354/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1065354/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
