--- a/VRChat/64/1064964.html
+++ b/VRChat/64/1064964.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hd/SAiokXvEq8dnjU2RrIPVGRJ/z33KjmhpAt1UUDog="></script>
+    "cmfae6h16XxwLm3EkHwAilm/rfS8jZabXm3WRdNUKks="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AnimationTimeController 音にあわせてアニメーションを調整","description":"VRChatでパーティクルライブ作成時など、Unityでの再生中に音とアニメーションの時間をいじる、簡単なコンポーネントだよ。\n\nバチャフェスとかVRストリートライブのパーティクルライブアニメーションを作るときに使いました。\n\n当時、オノッチさんが作ってくれたものや、他で公開されていたパーティクル、専用シェーダー付きのメッシュの位置や大きさ、表示タイミングなどを、わたしが時間に追われながら、アニメーション制作してたのです。ぐふふ。\n\n\n＜使い方＞\n\nパーティクルのメインAnimatorのあるオブジェクトにくっつけて、audioも設定、Unity実行中にエディタ側でanimTimeをいじりつつ、Animationを編集したりしてね。\n\nAnimation録画編集中にこのコンポーネントのanimTimeを変えるとその時間も記録されちゃうので、animTimeいじるときは録画ボタンをオフにするか、間違えて記録されたanimTimeのアニメーションをあとで削除してね。\n\n※パーティクル側のStartDelayなどで出現時間を全コントロールしているときにはこれだと無理です。\n\n※VRChatアップロード時には、このコンポーネントを外してください。\n\n※なお、パーティクルライブの表示、非表示についてはこのコンポーネントは無関係です。VRChatアバターのアニメーションオーバーライドもしくは、いわゆるEmoteSwitchを使ったりすると表示できます。でも、その仕組みを変に使うとみんなの邪魔、迷惑行為になっちゃうので（そうすると禁止されたりする可能性もあるし）、使うときはくれぐれもご注意を！","url":"https://booth.pm/ja/items/1064964","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1064964/d83780e1-98ae-4175-8387-a902dd5fe18f_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hd/SAiokXvEq8dnjU2RrIPVGRJ/z33KjmhpAt1UUDog="></script>
+    nonce="cmfae6h16XxwLm3EkHwAilm/rfS8jZabXm3WRdNUKks="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064964/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               352
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064964/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               352
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
