--- a/VRChat/11/1065011.html
+++ b/VRChat/11/1065011.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pwQE/diM6exJTTR9JX7xcpXEGRPm9WHZblnqwcZW8Rw="></script>
+    "bduCwozOoKqfL5xp4LpNx8JuOWTkRV3Hr9v5CJdAmDI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料DL有】丸太","description":"どこかでみたような丸太です。なんと作成者のボイス付‼\nどこかの島で吸血鬼と戦う時などに最適かと思います。\n不具合ありましたら連絡を！\nボイスなしの丸太もあるよ！\nUnity でそのまま使えるよ！\n","url":"https://booth.pm/ja/items/1065011","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/46562510-06c8-4894-b8da-23e5c97cfcf0/i/1065011/267d0d19-827c-4a17-bffe-824455c4881f_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pwQE/diM6exJTTR9JX7xcpXEGRPm9WHZblnqwcZW8Rw="></script>
+    nonce="bduCwozOoKqfL5xp4LpNx8JuOWTkRV3Hr9v5CJdAmDI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,10 +158,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1065011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              155
+                              156
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1065011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              155
+                              156
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
